Update Gradient practice 1.ipynb

--- a/Regression/Gradient practice 1.ipynb
+++ b/Regression/Gradient practice 1.ipynb
@@ -421,7 +421,7 @@
     "    delta_w1 = w_dot.dot(x) / m\n",
     "    \n",
     "    w[0] = w[0] - learning_rate * delta_w0\n",
-    "    w[1] = w[1] = learning_rate * delta_w1\n",
+    "    w[1] = w[1] - learning_rate * delta_w1\n",
     "    "
    ]
   },
